--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -574,9 +574,14 @@
 .demo-list ul span {
     color: #bbb;
 }
+
 .blank10 {
 	clear: both;
 	height: 10px;
 	line-height: 10px;
 	visibility: hidden;
+}
+
+.icheck > label {
+    padding-left: 30px;
 }
